; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/winfile/extr_winefile.c_get_file_type.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/winfile/extr_winefile.c_get_file_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@sEmpty = common dso_local global i64 0, align 8
@FT_EXECUTABLE = common dso_local global i32 0, align 4
@FT_DOCUMENT = common dso_local global i32 0, align 4
@FT_OTHER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64)* @get_file_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_file_type(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %5 = load i64, i64* %3, align 8
  %6 = call i64 @strrchrW(i64 %5, i8 signext 46)
  store i64 %6, i64* %4, align 8
  %7 = load i64, i64* %4, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %11, label %9

9:                                                ; preds = %1
  %10 = load i64, i64* @sEmpty, align 8
  store i64 %10, i64* %4, align 8
  br label %11

11:                                               ; preds = %9, %1
  %12 = load i64, i64* %4, align 8
  %13 = call i64 @is_exe_file(i64 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %11
  %16 = load i32, i32* @FT_EXECUTABLE, align 4
  store i32 %16, i32* %2, align 4
  br label %25

17:                                               ; preds = %11
  %18 = load i64, i64* %4, align 8
  %19 = call i64 @is_registered_type(i64 %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %17
  %22 = load i32, i32* @FT_DOCUMENT, align 4
  store i32 %22, i32* %2, align 4
  br label %25

23:                                               ; preds = %17
  %24 = load i32, i32* @FT_OTHER, align 4
  store i32 %24, i32* %2, align 4
  br label %25

25:                                               ; preds = %23, %21, %15
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local i64 @strrchrW(i64, i8 signext) #1

declare dso_local i64 @is_exe_file(i64) #1

declare dso_local i64 @is_registered_type(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
